tests/bugs/tuple_length_mismatch_605.sy
start :: fn do
    set.contains' (set.from_list' [(1, 2)]), (1,)
end
// error: $TupleLengthMismatch
